<resources>
    <string name="app_name">卡车医生</string>
    <string name="label_app_name">卡司科技技师端</string>
    <string name="product_feature">正品保障 价格透明 上门服务</string>
    <!-- Strings related to login -->
    <string name="prompt_phone">请输入手机号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_verify_code">请输入验证码</string>
    <string name="action_login">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="label_sms_login"><u>使用短信验证码登录</u></string>
    <string name="label_pwd_login"><u>使用密码登录</u></string>
    <string name="label_verify_code">获取验证码</string>
    <string name="prompt_forget_password">登录遇到困难?</string>
    <string name="error_empty_phone">请输入手机号</string>
    <string name="error_empty_pasword">请输入密码</string>
    <string name="error_invalid_phone">请输入11位手机号码</string>
    <string name="error_invalid_password">密码可输入数字，英文字母大小写，长度在6位以上</string>
    <string name="error_empty_code">请输入短信验证码</string>
    <string name="error_incorrect_login">无该账号</string>
    <string name="error_format_phone">不是正确的手机号码格式</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="label_contact">联系客服</string>
    <string name="label_contact_descripton">登录遇到困难,联系客服</string>
    <string name="action_cancel">取消</string>
    <string name="action_call_phone">确认拨打</string>

    <string name="permissin_title">卡车医生需要使用以下权限</string>
    <string name="permission_msg">使用手机存储\n用于下载，更新应用</string>
    <string name="permissin_btn">去设置</string>

    <!--版本升级提示-->
    <string name="update_tips">您有新版本啦，请升级！</string>
    <string name="update_ok">立即更新</string>
    <string name="update_cancel">稍后再说</string>

    <!--网络/刷新提示-->
    <string name="network_error_title">网络出错了</string>
    <string name="server_error_title">服务出错了</string>
    <string name="network_error_reason_title">可能原因：</string>
    <string name="network_error_reason">手机信号弱，WIFI无法连接网络，手机进入飞行模式等</string>
    <string name="server_error_reason">错误代码：%s，你可将此页面截图联系客服人员</string>
    <string name="refresh">刷新</string>


    <!--app主页底部导航栏TAB设置-->
    <string name="tab_my_order">我的订单</string>
    <string name="tab_my_message">消息中心</string>
    <string name="tab_my_pricelist">价格表</string>
    <string name="tab_custom_verifycode">客户验证码</string>
    <string name="tab_user_center">我的</string>

</resources>
