<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.juma.truckdoctor.js.activity.login.LoginActivity">

    <include
        layout="@layout/widget_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:hint="@string/prompt_phone"
                android:textColorHint="@android:color/darker_gray"
                android:background="@null"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#cccccc"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:background="@null"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundbackground_blue"
                android:layout_marginTop="16dp"
                android:text="@string/action_login"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>

            //忘记密码
            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:text="@string/prompt_forget_password"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>
    </LinearLayout>

</LinearLayout>
